--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server . -p 8000"
+    "start": "http-server -c-1 --silent"
   },
   "keywords": [],
   "author": "",
