--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "3D home design builder",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node js/server.js"
   },
   "dependencies": {
     "express": "^4.17.1"
